# clinical-anki-generator

./: .coverage  .gitignore  CONTRIBUTING.md  README.md  SETUP.md  cast.spec  junit.xml  pyproject.toml  requirements.txt  setup.ps1  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
cast/: cli.py  core.py  launcher.py
cast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cast/parsers/: __init__.py  amboss.py  apgo.py  nbme.py  uworld.py
cast/server/: app.py
cast/server/static/: style.css
cast/server/templates/: base.html  error.html  index.html  progress.html  results.html  setup.html
gen_anki/: 2025-06-10_22-45.txt  2025-06-10_22-49.txt  2025-06-11_12-43.txt  2025-06-18_16-30.txt  2025-06-18_17-47.txt  2025-06-24_12-45.txt  2025-06-25_14-55.txt  2025-06-30_15-35.txt  2025-07-06_19-13.txt  2025-07-13_18-53.txt  2025-07-20_19-32.txt
heart/: cli.py  core.py
heart.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
heart/parsers/: __init__.py  amboss.py  apgo.py  nbme.py  uworld.py
heart/server/: app.py
heart/server/static/: style.css
heart/server/templates/: base.html  error.html  index.html  progress.html  results.html  setup.html
src/: app_NBME_form_textfile.py  app_amboss.py  app_apgo.py  app_uworld.py  prompt_o3.txt
tests/: test_amboss.py  test_apgo.py  test_cli.py  test_core.py  test_nbme.py  test_server.py  test_uworld.py
tests/fixtures/: amboss_sample.html  amboss_sample_fallback.html  apgo_sample.html  apgo_sample_fallback.html  nbme_sample.txt  nbme_sample_alt.txt  uworld_sample.html  uworld_sample_fallback.html
