[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cast"
version = "0.1.0"
description = "Clinical Anki Study Tool"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "flask",
    "imgkit",
    "markdown",
    "openai",
    "pydantic",
    "python-dotenv",
]

[project.scripts]
cast = "cast.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["cast*", "src*"]
